# dogrs

./: .gitignore  CHANGELOG.md  Cargo.toml  ReadMe.md  check_console.js
dog-auth/: Cargo.toml  README.md
dog-auth-local/: Cargo.toml  README.md
dog-auth-local/src/: lib.rs  strategy.rs
dog-auth-local/src/hooks/: hash_password.rs  mod.rs  protect.rs
dog-auth-oauth/: CHANGELOG.md  Cargo.toml  README.md
dog-auth-oauth/src/: lib.rs  oauth2_client.rs  service.rs  strategy.rs
dog-auth/src/: core.rs  hooks.rs  jwt.rs  lib.rs  options.rs  service.rs  service_adapter.rs  strategy.rs
dog-auth/src/hooks/: authenticate.rs  connection.rs  event.rs  mod.rs
dog-axum/: Cargo.toml  README.md
dog-axum/src/: app.rs  error.rs  lib.rs  oauth.rs  params.rs  rest.rs  state.rs
dog-axum/src/middlewares/: mod.rs  multipart.rs
dog-axum/tests/: rest_errors.rs
dog-blob/: CHANGELOG.md  Cargo.toml  README.md
dog-blob/src/: adapter.rs  config.rs  coordinator.rs  error.rs  lib.rs  receipt.rs  s3_store.rs  session_store.rs  store.rs  types.rs  upload.rs
dog-core/: CHANGELOG.md  Cargo.toml  README.md
dog-core/src/: adapters.rs  app.rs  config.rs  errors.rs  events.rs  hooks.rs  lib.rs  registry.rs  schema.rs  service.rs  tenant.rs
dog-examples/auth-demo/: .env.example  Cargo.toml  README.md
dog-examples/auth-demo/src/: app.rs  channels.rs  config.rs  hooks.rs  lib.rs  main.rs
dog-examples/auth-demo/src/auth/: jwt.rs  local.rs  mod.rs
dog-examples/auth-demo/src/auth/oauth2/: google.rs  mod.rs
dog-examples/auth-demo/src/services/: mod.rs  types.rs
dog-examples/auth-demo/src/services/adapters/: auth_demo_adapter.rs  mod.rs
dog-examples/auth-demo/src/services/authentication/: authentication_service.rs  authentication_service_hooks.rs  authentication_shared.rs  mod.rs
dog-examples/auth-demo/src/services/messages/: messages_hooks.rs  messages_schema.rs  messages_service.rs  messages_shared.rs  mod.rs
dog-examples/auth-demo/src/services/oauth/: mod.rs  oauth_service.rs  oauth_shared.rs
dog-examples/auth-demo/src/services/users/: mod.rs  users_hooks.rs  users_schema.rs  users_service.rs  users_shared.rs
dog-examples/blog-axum/: Cargo.toml  README.md
dog-examples/blog-axum/src/: app.rs  channels.rs  hooks.rs  lib.rs  main.rs
dog-examples/blog-axum/src/services/: mod.rs  types.rs
dog-examples/blog-axum/src/services/adapters/: blog_adapter.rs  mod.rs
dog-examples/blog-axum/src/services/authors/: authors_hooks.rs  authors_schema.rs  authors_service.rs  authors_shared.rs  mod.rs
dog-examples/blog-axum/src/services/posts/: mod.rs  post_params.rs  posts_hooks.rs  posts_schema.rs  posts_service.rs  posts_shared.rs
dog-examples/blog-axum/src/utils/: logger.rs  mod.rs  validator.rs
dog-examples/blog-axum/tests/: http.rs
dog-examples/fleet-queue/: .env.example  .gitignore  AUTHORITATIVE_QUERY.tql  Cargo.toml  ELITE_TYPEDB_EXAMPLES.md  README.md  load_sample_data.sh  package.json  sample_data.tql  tailwind.config.js
dog-examples/fleet-queue/src/: app.rs  channels.rs  config.rs  functions.tql  hooks.rs  lib.rs  main.rs  schema.tql  typedb.rs
dog-examples/fleet-queue/src/background/: conventions.md  mod.rs
dog-examples/fleet-queue/src/background/jobs/: compliance_monitoring.rs  driver_assignment.rs  employee_assignment.rs  gps_tracking.rs  maintenance_scheduling.rs  mod.rs  route_rebalancing.rs  sla_monitoring.rs
dog-examples/fleet-queue/src/services/: mod.rs  types.rs
dog-examples/fleet-queue/src/services/certifications/: certifications_hooks.rs  certifications_service.rs  certifications_shared.rs  mod.rs
dog-examples/fleet-queue/src/services/deliveries/: deliveries_hooks.rs  deliveries_service.rs  deliveries_shared.rs  mod.rs
dog-examples/fleet-queue/src/services/drivers/: drivers_hooks.rs  drivers_service.rs  drivers_shared.rs  mod.rs
dog-examples/fleet-queue/src/services/employees/: employees_hooks.rs  employees_service.rs  employees_shared.rs  mod.rs
dog-examples/fleet-queue/src/services/jobs/: jobs_adapter.rs  (+4 more)
dog-examples/fleet-queue/static/: app.js  fleet-app.js  index.html  input.css  output.css  style.css  styles.css
dog-examples/music-blobs/: .dockerignore  .env  .env.example  Cargo.toml  Dockerfile  README-Docker.md  README.md  docker-compose.yml
dog-examples/music-blobs/src/: app.rs  channels.rs  hooks.rs  lib.rs  main.rs  rustfs.rs  rustfs_store.rs  upload_store.rs
dog-examples/music-blobs/src/metadata/: audio.rs  mime.rs  mod.rs
dog-examples/music-blobs/src/services/: mod.rs  types.rs
dog-examples/music-blobs/static/: app.js  index.html  style.css
dog-examples/social-typedb/: Cargo.toml  README.md  insert_sample_data.sh  load_sample_data.sh  sample_data.tql
dog-examples/social-typedb/src/: app.rs  channels.rs  hooks.rs  lib.rs  main.rs  schema.tql  typedb.rs
dog-examples/social-typedb/src/services/: mod.rs  types.rs
dog-examples/social-typedb/static/: app.js  index.html  like-functions.js
dog-queue/: Architecture.md  Cargo.toml  README.md
dog-queue/docs/: conformance.md
dog-queue/src/: adapter.rs  engine.rs  error.rs  lib.rs
dog-queue/src/backend/: mod.rs
dog-queue/src/backend/memory/: mod.rs  reaper.rs  storage.rs
dog-queue/src/codec/: json.rs  mod.rs
dog-queue/src/execution/: adaptive.rs  executor.rs  job.rs  mod.rs
dog-queue/src/job/: mod.rs  registry.rs
dog-queue/src/observability/: analytics.rs  metrics.rs  mod.rs  tracing.rs
dog-queue/src/tests/: integration.rs
dog-queue/src/types/: capabilities.rs  ctx.rs  events.rs  ids.rs  message.rs  mod.rs  priority.rs  record.rs
dog-queue/tests/: conformance_memory.rs
dog-schema/: Cargo.toml  README.md
dog-schema-macros/: CHANGELOG.md  Cargo.toml
dog-schema-macros/src/: lib.rs
dog-schema-validator/: Cargo.toml  README.md
dog-schema-validator/src/: lib.rs
dog-schema/src/: hooks.rs  lib.rs  schema_hooks.rs
dog-typedb/: CHANGELOG.md  Cargo.toml  README.md
dog-typedb/src/: adapter.rs  lib.rs  service.rs  transactions.rs
dog-typedb/tests/: security_tests.rs  typedb_enforcement_test.rs  vulnerability_test.rs
examples/jango-clone/: Cargo.toml
(+49 files in other folders)
