[workspace]
members = [
    "dog-core",
    "dog-axum",
    "dog-typedb",
    "dog-blob",
    "dog-queue",
    "dog-schema",
    "dog-schema-macros",
    "dog-schema-validator",
    "dog-examples/music-blobs",
    "dog-examples/blog-axum",
    "dog-examples/social-typedb",
    "dog-examples/fleet-queue",
    "dog-examples/auth-demo",
    "dog-auth",
    "dog-auth-local",
    "dog-auth-oauth"
]

resolver = "2"
