[package]
name = "dog-auth-oauth"
version = "0.1.0"
edition = "2021"
description = "OAuth authentication support for DogRS"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
dog-auth = { path = "../dog-auth" }
dog-core = { path = "../dog-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
