[package]
name = "dog-auth-oauth"
version = "0.1.6"
edition = "2021"
description = "OAuth authentication support for DogRS"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
dog-auth = { path = "../dog-auth", version = "0.1.6" }
dog-core = { path = "../dog-core", version = "0.1.6" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

oauth2 = { version = "4.4", default-features = false, features = ["reqwest", "rustls-tls"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }

[features]
oauth2-client = ["dep:oauth2", "dep:reqwest"]

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
