[package]
name = "dog-auth"
version = "0.1.0"
edition = "2021"
description = "Authentication system for DogRS framework"
license = "MIT OR Apache-2.0"
repository = "https://github.com/samsonssali/dogrs"
keywords = ["authentication", "jwt", "dogrs", "framework"]
categories = ["authentication", "web-programming"]

[features]
default = ["jwt-aws-lc-rs"]

# JWT crypto backend features - exactly one must be selected
jwt-aws-lc-rs = ["dep:jsonwebtoken", "jsonwebtoken/aws_lc_rs"]
jwt-rust-crypto = ["dep:jsonwebtoken", "jsonwebtoken/rust_crypto"]

# Optional PEM decoding support (enabled by default in jsonwebtoken)
jwt-no-pem = []

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bcrypt = "0.18.0"
chrono = { version = "0.4", features = ["serde"] }
dog-core = { path = "../dog-core" }
http = "1.0"
# jsonwebtoken with configurable crypto backend via features
jsonwebtoken = { version = "10.2.0", optional = true, default-features = false }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.18"
tower = "0.5"
tower-http = "0.6"
uuid = { version = "1.10", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
