[package]
name = "dog-axum"
version = "0.1.0"
edition = "2021"
description = "Axum web framework integration for DogRS - HTTP handlers, middleware, and web utilities"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Jitpomi/dogrs"
documentation = "https://docs.rs/dog-axum"
keywords = ["axum", "web", "http", "framework"]
categories = ["web-programming", "asynchronous"]
readme = "../README.md"

[package.metadata]

[package.metadata.ferrisup]
component_type = "library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.7", features = ["macros", "json", "multipart"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"
base64 = "0.22"
anyhow = "1.0.100"
async-trait = "0.1.89"
tracing = "0.1.41"
tower-http = { version = "0.6.6", features = ["trace", "request-id"] }
uuid = { version = "1.18.1", features = ["v4"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
dog-core = { version = "0.1.0", features = ["serde"] }
multer = "3.1.0"
futures = "0.3.31"
bytes = "1.8.0"

[dev-dependencies]
anyhow = "1.0.100"
tower = "0.5.2"
http-body-util = "0.1.3"

[lib]
name = "dog_axum"
path = "src/lib.rs"
