[package]
name = "dog-axum"
version = "0.1.0"
edition = "2021"
authors = ["Jitpomi <hello@jitpomi.com>"]
description = "Axum web framework integration for DogRS - HTTP handlers, middleware, and web utilities"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Jitpomi/dogrs"
documentation = "https://docs.rs/dog-axum"
keywords = ["axum", "web", "http", "framework"]
categories = ["web-programming", "asynchronous"]
readme = "../README.md"

[package.metadata]

[package.metadata.ferrisup]
component_type = "library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.8", features = ["macros", "json", "multipart"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "fs", "io-util"] }
tower = "0.5.3"
base64 = "0.22.1"
anyhow = "1.0.101"
async-trait = "0.1.90"
tracing = "0.1.42"
tower-http = { version = "0.6.8", features = ["trace", "request-id"] }
uuid = { version = "1.19.0", features = ["v4"] }
serde = { version = "1.0.230", features = ["derive"] }
serde_json = "1.0.146"
dog-core = { version = "0.1.0", features = ["serde"] }
multer = "3.2.0"
futures = "0.3.32"
bytes = "1.9.0"

[dev-dependencies]
anyhow = "1.0.101"
tower = "0.5.3"
http-body-util = "0.1.4"

[lib]
name = "dog_axum"
path = "src/lib.rs"
