[package]
name = "dog-blob"
version = "0.1.0"
edition = "2021"
authors = ["Jitpomi <hello@jitpomi.com>"]
description = "Production-ready blob storage infrastructure with streaming, multipart uploads, and range requests"
documentation = "https://docs.rs/dog-blob"
repository = "https://github.com/Jitpomi/dogrs"
license = "MIT OR Apache-2.0"
keywords = ["blob", "storage", "streaming", "s3", "media"]
categories = ["web-programming", "multimedia", "filesystem"]
readme = "README.md"

[package.metadata]

[package.metadata.ferrisup]
component_type = "library"

[dependencies]
async-stream = "0.3.7"
async-trait = "0.1.90"
base64 = "0.22.2"
bytes = "1.9.0"
chrono = { version = "0.4.42", features = ["serde"] }
futures-core = "0.3.32"
futures-util = "0.3.32"
serde = { version = "1.0.230", features = ["derive"] }
serde_json = "1.0.146"
thiserror = "1.0.70"
tokio = { version = "1.49.0", features = ["sync", "fs"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }

# AWS SDK dependencies for S3-compatible storage
aws-config = "1.9"
aws-credential-types = "1.3"
aws-sdk-s3 = "1.120"
futures = "0.3.32"

[features]
default = []

[dev-dependencies]
tokio = { version = "1.49.0", features = ["full"] }
tokio-test = "0.4.5"

[lib]
name = "dog_blob"
path = "src/lib.rs"
