[package]
name = "dog-blob"
version = "0.1.6"
edition = "2021"
authors = ["Jitpomi <hello@jitpomi.com>"]
description = "Production-ready blob storage infrastructure with streaming, multipart uploads, and range requests"
documentation = "https://docs.rs/dog-blob"
repository = "https://github.com/Jitpomi/dogrs"
license = "MIT OR Apache-2.0"
keywords = ["blob", "storage", "streaming", "s3", "media"]
categories = ["web-programming", "multimedia", "filesystem"]
readme = "README.md"

[package.metadata]

[package.metadata.ferrisup]
component_type = "library"

[dependencies]
async-stream = "0.3.6"
async-trait = "0.1.89"
base64 = "0.22.1"
bytes = "1.8.0"
chrono = { version = "0.4.38", features = ["serde"] }
futures-core = "0.3.31"
futures-util = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "1.0.69"
tokio = { version = "1.41.1", features = ["sync", "fs"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }

# AWS SDK dependencies for S3-compatible storage
aws-config = "1.8"
aws-credential-types = "1.2"
aws-sdk-s3 = "1.119"
futures = "0.3"

[features]
default = []

[dev-dependencies]
tokio = { version = "1.41.1", features = ["full"] }
tokio-test = "0.4.4"

[lib]
name = "dog_blob"
path = "src/lib.rs"
