[package]
name = "dog-blob"
version = "0.1.7"
edition = "2021"
authors = ["Jitpomi <hello@jitpomi.com>"]
description = "Production-ready blob storage infrastructure with streaming, multipart uploads, and range requests"
documentation = "https://docs.rs/dog-blob"
repository = "https://github.com/Jitpomi/dogrs"
license = "MIT OR Apache-2.0"
keywords = ["blob", "storage", "streaming", "s3", "media"]
categories = ["web-programming", "multimedia", "filesystem"]
readme = "README.md"

[package.metadata]

[package.metadata.ferrisup]
component_type = "library"

[dependencies]
async-stream = "0.3.6"
async-trait = "0.1.89"
base64 = "0.22.1"
bytes = "1.11.1"
chrono = { version = "0.4.45", features = ["serde"] }
futures-core = "0.3.32"
futures-util = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["sync", "fs"] }
uuid = { version = "1.23.2", features = ["v4", "serde"] }

# AWS SDK dependencies for S3-compatible storage
aws-config = "1.8"
aws-credential-types = "1.2"
aws-sdk-s3 = "1.135"
futures = "0.3"

[features]
default = []

[dev-dependencies]
tokio = { version = "1.52.3", features = ["full"] }
tokio-test = "0.4.5"

[lib]
name = "dog_blob"
path = "src/lib.rs"
