[package]
name = "dog-core"
version = "0.1.0"
edition = "2021"
description = "A Rust library created with FerrisUp"
license = "MIT OR Apache-2.0"

[package.metadata]

[package.metadata.ferrisup]
component_type = "library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.89"
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"], optional = true }
serde_json = { version = "1.0.145", optional = true }

[features]
default = []
serde = ["dep:serde", "dep:serde_json"]
adapters = []

[dev-dependencies]

[lib]
name = "dog_core"
path = "src/lib.rs"
