[package]
name = "dog-core"
version = "0.1.8"
edition = "2021"
authors = ["Jitpomi <hello@jitpomi.com>"]
description = "Core traits and utilities for the DogRS ecosystem - a modular Rust framework for building scalable applications"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Jitpomi/dogrs"
documentation = "https://docs.rs/dog-core"
keywords = ["framework", "async", "traits", "core"]
categories = ["development-tools", "asynchronous"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
anyhow = "1"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[features]
default = ["json"]
json = ["dep:serde_json", "serde"]
serde = ["dep:serde"]
adapters = []

[dev-dependencies]
serde_json = "1"
[lib]
name = "dog_core"
path = "src/lib.rs"
