[package]
name = "dog-schema-macros"
version = "0.1.0"
edition = "2021"
authors = ["Jitpomi <hello@jitpomi.com>"]
description = "Procedural macros for DogRS schema generation - derive macros for validation and serialization"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Jitpomi/dogrs"
documentation = "https://docs.rs/dog-schema-macros"
keywords = ["macros", "proc-macro", "schema", "derive"]
categories = ["development-tools::procedural-macro-helpers", "data-structures"]
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.101"
quote = "1.0.41"
syn = { version = "1.0", features = ["full", "extra-traits"] }
