[package]
name = "dog-schema-macros"
version = "0.1.8"
edition = "2021"
authors = ["Jitpomi <hello@jitpomi.com>"]
description = "Procedural macros for DogRS schema generation - derive macros for validation and serialization"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Jitpomi/dogrs"
documentation = "https://docs.rs/dog-schema-macros"
keywords = ["macros", "proc-macro", "schema", "derive"]
categories = ["development-tools::procedural-macro-helpers", "data-structures"]
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
# TODO: migrate to syn 2 — syn 1 forces double-compilation when a downstream crate
# also uses syn 2 (which is now the common case). Requires rewriting all
# parse_macro_input!/AttributeArgs/NestedMeta usage to syn 2 APIs.
syn = { version = "2", features = ["full", "extra-traits"] }
