[package]
name = "dog-schema-validator"
version = "0.1.0"
edition = "2021"

[dependencies]
dog-schema = { path = "../dog-schema" }
dog-core = { path = "../dog-core", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
validator = { version = "0.20.0", features = ["derive"] }
anyhow = "1.0.100"
