[package]
name = "dog-schema-validator"
version = "0.1.6"
edition = "2021"
authors = ["Jitpomi <hello@jitpomi.com>"]
description = "Advanced validation utilities for DogRS schemas - runtime validation, constraints, and error handling"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Jitpomi/dogrs"
documentation = "https://docs.rs/dog-schema-validator"
keywords = ["validation", "schema", "constraints", "validator"]
categories = ["data-structures", "development-tools"]
readme = "README.md"

[dependencies]
dog-schema = { path = "../dog-schema", version = "0.1.6" }
dog-core = { path = "../dog-core", version = "0.1.6", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
validator = { version = "0.20.0", features = ["derive"] }
anyhow = "1.0.100"
