[package]
name = "dog-schema"
version = "0.1.4"
edition = "2021"
authors = ["Jitpomi <hello@jitpomi.com>"]
description = "Schema definition and validation utilities for DogRS - JSON schema, validation, and type safety"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Jitpomi/dogrs"
documentation = "https://docs.rs/dog-schema"
keywords = ["schema", "validation", "json", "types"]
categories = ["data-structures", "development-tools"]
readme = "README.md"

[dependencies]
dog-core = { version = "0.1.4", features = ["serde"] }
serde_json = "1.0.145"
anyhow = "1.0.100"

# Re-export proc macros
dog-schema-macros = "0.1.4"
