[package]
name = "dog-typedb"
version = "0.1.0"
edition = "2021"
authors = ["Jitpomi <hello@jitpomi.com>"]
description = "TypeDB database integration for DogRS - adapters, utilities, and TypeQL query builders"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Jitpomi/dogrs"
documentation = "https://docs.rs/dog-typedb"
keywords = ["typedb", "database", "graph", "adapter"]
categories = ["database", "development-tools"]
readme = "../README.md"

[package.metadata]

[package.metadata.ferrisup]
component_type = "library"

[dependencies]
anyhow = "1.0.101"
async-trait = "0.1.90"
dog-core = "0.1.0"
serde_json = "1.0.146"
typedb-driver = "3.8.0"
futures = "0.3.32"
tokio = { version = "1.49.0", features = ["sync"] }

[dev-dependencies]

[lib]
name = "dog_typedb"
path = "src/lib.rs"
