[package]
name = "auth-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
dog-core = { path = "../../dog-core", features = ["serde", "adapters"] }
dog-axum = { path = "../../dog-axum", features = ["auth"] }
dog-auth = { path = "../../dog-auth" }
dog-auth-local = { path = "../../dog-auth-local" }
dog-auth-oauth = { path = "../../dog-auth-oauth", features = ["oauth2-client"] }
dog-schema = { path = "../../dog-schema" }
dog-schema-validator = { path = "../../dog-schema-validator" }
axum = { version = "0.8", features = ["macros", "json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
jsonwebtoken = "9.0"
dotenvy = "0.15"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
validator = { version = "0.20.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
