[package]
name = "blog-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = { version = "0.8.7", features = ["macros", "json"] }
chrono = { version = "0.4.41", features = ["serde"] }
dog-axum = "0.1.0"
dog-core = { version = "0.1.0", features = ["serde", "adapters"] }
dog-schema = "0.1.0"
dog-schema-validator = { path = "../../dog-schema-validator" }
futures = "0.3.31"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "time"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }

[dev-dependencies]
anyhow = "1.0.100"
tower = "0.5.2"
http-body-util = "0.1.3"
