[package]
name = "blog-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.101"
async-trait = "0.1.90"
axum = { version = "0.8.8", features = ["macros", "json"] }
chrono = { version = "0.4.42", features = ["serde"] }
dog-axum = "0.1.0"
dog-core = { version = "0.1.0", features = ["serde", "adapters"] }
dog-schema = "0.1.0"
dog-schema-validator = "0.1.0"
futures = "0.3.32"
tracing = "0.1.42"
tracing-subscriber = { version = "0.3.21", features = ["fmt", "env-filter"] }
serde = { version = "1.0.230", features = ["derive"] }
serde_json = "1.0.146"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "time"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
validator = { version = "0.21.0", features = ["derive"] }

[dev-dependencies]
anyhow = "1.0.101"
tower = "0.5.3"
http-body-util = "0.1.4"
