[package]
name = "fleet-queue"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.146"
serde = { version = "1.0.230", features = ["derive"] }
anyhow = "1.0.101"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "fs"] }
async-trait = "0.1.90"
typedb-driver = "3.8.0"
dotenvy = "0.15.7"
reqwest = { version = "0.12.9", features = ["json"] }
chrono = { version = "0.4.42", features = ["serde"] }
urlencoding = "2.2"
dog-axum = "0.1.0"
dog-core = "0.1.0"
dog-typedb = "0.1.0"
dog-queue = { path = "../../dog-queue" }  # Not published yet - excluded from publishing

[lib]
name = "fleet_queue"
path = "src/lib.rs"
